@@ -4,6 +4,7 @@
 - Add in key shortcut for local hostname macro (ALT-l)
 - Fixed a bug with 'show history' key shortcut
 - Fixed "uninitialised errors in hash element" bug [clusterssh support-requests:#38]
+- Fixed the default cluster not being opened
 
 2013-04-16 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.02_01
 - Refactured file loading code
